portfolio/src/styles/ProjectModal.css
.project-modal-header {
    border-bottom: none;
    padding: 0;
}

.modal-content {
    padding: 10px;
}

.project-img-container {
    width: 100%;
    text-align: center;
    margin-bottom: 30px;
}

.project-img {
    width: 100%;
    height: 100%;
    max-height: 300px;
    object-fit: contain;
    object-position: top;
    border-radius: 10px;
}

.project-title {
    display: inline;
}

.badge-container {
    display: inline;
    margin-left: 1.5rem;
    vertical-align: top;
}

.badges-btn {
    background-color: #ebebeb;
    margin: 0 5px 0 5px;
    padding: 5px 15px;
    display: inline-block;
    color: #636363;
    font-size: 12px;
    font-weight: 500;
    text-transform: uppercase;
    border-radius: 2px;
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    transition-duration: 500ms;
    letter-spacing: 1px; }
    .badges-btn:hover, .badges-btn:focus {
      background-color: #343A40;
      color: #C4C7CB;
      text-decoration: none;
      font-weight: 500; }

.techskills-text {
    padding-top: 1rem;
}

ul li {
    list-style-type: disc;
    margin-left: 20px;
}

